# tdc-charts

./: .gitignore  README.md  env.example  pyproject.toml  tdc.yaml
.github/workflows/: release.yml  ruff.yml
docs/: TDC_project_plan.md  accuracy_and_confidence.md  developer_guide.md  development_policy.md  user_guide.md
src/tdc/: __init__.py  config.py  data.py  density.py  exceptions.py  export.py  features.py  intrabar.py  logger.py  main.py  render.py  simulate.py  versioning.py
tests/: test_alphavantage.py  test_config.py  test_density.py  test_export.py  test_features.py  test_render.py  test_simulate.py
