[project]
name = "tdc-charts"
version = "0.1.0"
description = "TimeDensityCandle (TDC) chart generator and feature extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "yfinance>=0.2.30",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pydantic>=2.5.0",
    "ruamel.yaml>=0.18.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tdc"]

[project.scripts]
tdc = "tdc.main:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
